fix overflow navbar

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 .mynavbar {
-  background-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
   backdrop-filter: blur(4px);
 }
 
@@ -213,6 +213,9 @@ body {
   .mynavbar .nav-link {
     font-size: 2rem;
     text-align: center;
+  }
+  .sticky-top {
+    overflow: hidden;
   }
   .home .heart {
     display: none !important;
